.metadata/.plugins/org.eclipse.cdt.ui/cv03b.build.log
12:39:46 **** Incremental Build of configuration Debug for project cv03b ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x8 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:101:11: warning: unsigned conversion from 'long long int' to 'uint32_t' {aka 'long unsigned int'} changes value from '31580763870' to '1515992798' [-Woverflow]
  101 |   sct_led(0x75A5C36DE);
      |           ^~~~~~~~~~~
../Core/Src/main.c:160:13: error: invalid storage class for function 'MX_TIM1_Init'
  160 | static void MX_TIM1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:210:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  210 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:245:13: error: invalid storage class for function 'MX_GPIO_Init'
  245 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:300:1: error: expected declaration or statement at end of input
  300 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:54:13: warning: 'MX_GPIO_Init' used but never defined
   54 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:55:13: warning: 'MX_USART2_UART_Init' used but never defined
   55 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:56:13: warning: 'MX_TIM1_Init' used but never defined
   56 | static void MX_TIM1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:291:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  291 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:245:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  245 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:210:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  210 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:160:13: warning: 'MX_TIM1_Init' defined but not used [-Wunused-function]
  160 | static void MX_TIM1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:122:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  122 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

12:39:46 Build Failed. 5 errors, 9 warnings. (took 467ms)

